# unified-runtime

./: CMakeLists.txt  Dockerfile
.github/workflows/: benchmarks_compute.yml  cmake.yml  codeql.yml  coverage.yml  coverity.yml  e2e_core.yml  nightly.yml
cmake/: FetchLevelZero.cmake
examples/codegen/: CMakeLists.txt  codegen.cpp
examples/usm_alloc/: main.cpp
include/: ur.py  ur_api.h  ur_ddi.h
scripts/benchmarks/: main.py
scripts/benchmarks/benches/: compute.py  velocity.py
scripts/core/: PROG.rst  common.yml  enqueue.yml  program.yml  registry.yml  usm.yml
scripts/templates/: queue_api.cpp.mako  queue_api.hpp.mako
source/: ur_api.cpp
source/adapters/: CMakeLists.txt
source/adapters/cuda/: CMakeLists.txt  usm.cpp
source/adapters/hip/: CMakeLists.txt  usm.cpp
source/adapters/level_zero/: CMakeLists.txt  adapter.cpp  command_buffer.cpp  command_buffer.hpp  common.cpp  common.hpp  context.cpp  context.hpp  device.cpp  device.hpp  event.cpp  event.hpp  event_pool.cpp  event_pool.hpp  image.cpp  kernel.cpp  kernel.hpp  memory.cpp  platform.cpp  (+7 more)
source/common/: CMakeLists.txt  install_folly.sh  latency_tracker.cpp  latency_tracker.hpp  uma_helpers.hpp  uma_tracker.hpp  umf_helpers.cpp  umf_helpers.hpp  ur_latency_tracker.hpp  ur_params.hpp  ur_pool_manager.hpp  ur_singleton.hpp  ur_uma_helpers.h  ur_util.hpp  usm_pool_config.cpp  usm_pool_config.hpp  usm_pool_manager.hpp
source/common/uma_pools/: disjoint_pool.cpp  disjoint_pool.hpp  disjoint_pool_config.cpp  disjoint_pool_config.hpp  usm_allocator.cpp  usm_pool.hpp
source/common/umf_pools/: disjoint_pool.hpp  disjoint_pool_config_parser.cpp  disjoint_pool_config_parser.hpp
source/common/unified_malloc_framework/: CMakeLists.txt
source/common/unified_malloc_framework/include/umf/: memory_pool.h  memory_pool.hpp  memory_provider.hpp
source/common/unified_malloc_framework/include/umf/pools/: disjoint_pool.h  disjoint_pool.hpp
source/common/unified_malloc_framework/src/: disjoint_pool.cpp  memory_pool.cpp  memory_pool_default.cpp  memory_pool_internal.hpp  memory_pool_tracking.cpp
source/common/unified_memory_allocation/: CMakeLists.txt
source/common/unified_memory_allocation/include/: unified_memory_allocation.h
source/common/unified_memory_allocation/include/uma/: base.h  memory_pool.h  memory_pool_ops.h  memory_provider.h  memory_provider_ops.h  memory_tracker.h  memory_tracker_ops.h
source/common/unified_memory_allocation/src/: memory_pool.c  memory_provider.c  memory_tracker.c  memory_tracker.cpp  memory_tracker_internal.h  object.h
source/loader/: CMakeLists.txt  ur_ldrddi.cpp  ur_lib.hpp  ur_libapi.cpp
test/: CMakeLists.txt  l0_in_order_repro.cpp
test/test_c_cpp/: CMakeLists.txt  test.c  test.h  test_main.cpp
test/unified_malloc_framework/: memoryPool.hpp
test/unified_memory_allocation/: CMakeLists.txt  memoryPool.cpp  memoryPool.hpp  memoryPoolAPI.cpp  memoryPoolInterface.cpp  memoryProviderInterface.cpp  memoryProviderTracking.cpp
test/usm/: usmPoolManager.cpp
(+71 files in other folders)
